--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Abialidr.github.io/JethiTech-Solutions-test-task",
   "name": "JethiTech-Solutions-test-task",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "caniuse-lite": "^1.0.30001579",
+    "gh-pages": "^6.1.1",
     "moment": "^2.29.4",
     "mui-tel-input": "^3.1.1",
     "react": "^18.2.0",
@@ -25,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
